effects: Fix crash in screen transform

When we add a screen we perform actions immediately, this requires an
openGL context current

BUG: 459837